# stochastic-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  rust.yml
.zed/: settings.json
examples/: Cargo.toml
examples/src/: main.rs
src/: ai.rs  c.rs  fbm.rs  lib.rs  macros.rs  main.rs  parrallel.rs  prelude.rs  quant.rs  stats.rs  stochastic.rs  utils.rs
src/ai/: fou.rs  utils.rs
src/ai/fou/: fou_lstm_datasets.rs  fou_lstm_model_1_d.rs  fou_lstm_model_2_d.rs  fou_vae.rs
src/ai/fou_lstm/: lstm_model_2_d.rs
src/ai/volatility/: heston.rs
src/diffusions/: cir.rs  fcir.rs  fgbm.rs  fjacobi.rs  fou.rs  gbm.rs  jacobi.rs  mod.rs  ou.rs
src/interest/: duffie_kan.rs  fvasicek.rs  ho_lee.rs  mod.rs  mvasicek.rs  vasicek.rs
src/jumps/: bates.rs  ig.rs  jump_fou.rs  levy_diffusion.rs  merton.rs  mod.rs  nig.rs  vg.rs
src/models/: duffie_kan.rs  fvasicek.rs  heston.rs  mod.rs  sabr.rs  vasicek.rs
src/noises/: cfgns.rs  cgns.rs  fgn.rs  fgn_cholesky.rs  fgn_fft.rs  gn.rs  mod.rs
src/processes/: bm.rs  cbms.rs  ccustom.rs  cfbms.rs  correlated.rs  cpoisson.rs  customjt.rs  fbm.rs  mod.rs  poisson.rs
src/quant/: bonds.rs  calibration.rs  heston.rs  noises.rs  options.rs  pricing.rs  strategies.rs  trait.rs  traits.rs  traits_f.rs  volatility.rs  yahoo.rs
src/quant/bonds/: cir.rs  hull_white.rs  vasicek.rs
src/quant/bsm/: calibrator.rs  pricer.rs
src/quant/calibration/: bsm.rs  heston.rs
src/quant/diffusions/: bm.rs  fbm.rs  fou.rs  ou.rs
src/quant/heston/: calibrator.rs  pricer.rs
src/quant/noises/: fgn.rs  gn.rs
src/quant/options/: bsm.rs
src/quant/pricing/: asian.rs  bsm.rs  finitie_difference.rs  heston.rs  merton_jump.rs
src/quant/strategies/: delta_hedge.rs
src/quant/volatility/: heston.rs  merton_jump.rs
src/statistics/: fractal_dim.rs
src/stats/: cir.rs  double_exp.rs  fd.rs  fou_estimator.rs  mle.rs  non_central_chi_squared.rs
src/stochastic/: diffusion.rs  diffusions.rs  interest.rs  isonormal.rs  jump.rs  malliavin.rs  traits.rs  volatility.rs
src/stochastic/diffusion/: cev.rs  cir.rs  fcir.rs  fgbm.rs  fjacobi.rs  fou.rs  gbm.rs  jacobi.rs  ou.rs
src/stochastic/diffusions/: ou.rs
src/stochastic/interest/: adg.rs  cir.rs  cir_2f.rs  duffie_kan.rs  fvasicek.rs  hjm.rs  ho_lee.rs  hull_white.rs  hull_white_2f.rs  vasicek.rs
src/stochastic/jump/: bates.rs  cgmy.rs  cts.rs  ig.rs  jump_fou.rs  kou.rs  levy_diffusion.rs  merton.rs  nig.rs  rdts.rs  vg.rs
src/stochastic/malliavin/: malliavin_1d.rs  malliavin_2d.rs
src/stochastic/noise/: cfgns.rs  cgns.rs  fgn.rs
src/stochastic/process/: bm.rs  cbms.rs  ccustom.rs  cfbms.rs  cpoisson.rs  customjt.rs  fbm.rs  poisson.rs
src/stochastic/volatility/: bergomi.rs  fheston.rs  heston.rs  rbergomi.rs  sabr.rs  svcgmy.rs
src/volatility/: heston.rs  mod.rs  sabr.rs
stochastic-rs-ai/: Cargo.toml
stochastic-rs-ai/src/: fou_lstm.rs
stochastic-rs-ai/src/fou_lstm/: datasets.rs  lstm_model_1_d.rs
stochastic-rs-core/: Cargo.toml  README.md
stochastic-rs-core/src/: diffusion.rs  interest.rs  jump.rs  lib.rs  main.rs  noise.rs  process.rs  volatility.rs
stochastic-rs-core/src/diffusion/: cir.rs  fcir.rs  fgbm.rs  fjacobi.rs  fou.rs  gbm.rs  jacobi.rs  ou.rs
stochastic-rs-core/src/diffusions/: cir.rs  fcir.rs  fgbm.rs  fjacobi.rs  fou.rs  gbm.rs  jacobi.rs  ou.rs
stochastic-rs-core/src/interest/: duffie_kan.rs  fvasicek.rs  ho_lee.rs  mvasicek.rs  vasicek.rs
stochastic-rs-core/src/jump/: bates.rs  ig.rs  jump_fou.rs  levy_diffusion.rs  merton.rs  nig.rs  vg.rs
stochastic-rs-core/src/jumps/: bates.rs  jump_fou.rs  nig.rs
stochastic-rs-core/src/noise/: cfgns.rs  cgns.rs  fgn.rs
stochastic-rs-core/src/noises/: cfgns.rs  fgn.rs
stochastic-rs-core/src/process/: bm.rs  cbms.rs  ccustom.rs  cfbms.rs  cpoisson.rs  customjt.rs  fbm.rs  poisson.rs
stochastic-rs-core/src/processes/: bm.rs  cbms.rs  ccustom.rs  cfbms.rs  cpoisson.rs  customjt.rs  fbm.rs  mod.rs  poisson.rs
stochastic-rs-core/src/volatility/: bergomi.rs  fheston.rs  heston.rs  rbergomi.rs  sabr.rs
stochastic-rs-macros/: Cargo.toml
stochastic-rs-macros/src/: lib.rs
stochastic-rs-ml/: Cargo.toml
stochastic-rs-quant/: Cargo.toml
stochastic-rs-quant/src/: calibrator.rs  diffusions.rs  lib.rs  pricer.rs  traits.rs  traits_f.rs  volatility.rs  yahoo.rs
stochastic-rs-quant/src/calibration/: heston.rs
stochastic-rs-quant/src/diffusions/: bm.rs  fbm.rs  fou.rs  ou.rs
stochastic-rs-quant/src/heston/: calibrator.rs  pricer.rs
stochastic-rs-quant/src/noises/: fgn.rs  gn.rs
stochastic-rs-quant/src/options/: bsm.rs
stochastic-rs-quant/src/pricer/: heston.rs
stochastic-rs-quant/src/pricing/: heston.rs
stochastic-rs-quant/src/volatility/: heston.rs
stochastic-rs-stats/: Cargo.toml
stochastic-rs-stats/src/: fd.rs  lib.rs  mle.rs
