[package]
name = "stochastic-rs"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "A Rust library for stochastic processes"
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs/latest/stochastic_rs/"
repository = "https://github.com/dancixx/stochastic-rs"
readme = "README.md"
keywords = ["stochastic", "process", "random", "simulation", "monte-carlo"]

[dependencies]
linreg = "0.2.0"
ndarray = { version = "0.15.6", features = [
    "rayon",
    "matrixmultiply-threading",
] }
num-complex = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
indicatif = "0.17.7"
plotly = "0.8.4"
ndarray-rand = "0.14.0"
ndrustfft = "0.4.2"

[dev-dependencies]


[lib]
name = "stochastic_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
f32 = []
