[package]
name = "stochastic-rs-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
candle-core = {version = "0.6.0", features = ["accelerate", "metal"]}
candle-datasets = {version = "0.6.0"}
candle-metal-kernels = "0.6.0"
candle-nn = {version = "0.6.0", features = ["accelerate", "metal"]}
indicatif = "0.17.7"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
polars = "0.43.1"
polars-io = {version = "0.43.1", features = ["csv"]}
rand_distr = "0.4.3"
stochastic-rs = {version = "0.8.0", path = "../stochastic-rs-core"}
