[package]
name = "stochastic-rs"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "A Rust library for stochastic processes"
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs/latest/stochastic_rs/"
repository = "https://github.com/dancixx/stochastic-rs"
readme = "README.md"
keywords = ["stochastic", "process", "random", "simulation", "monte-carlo"]


[dependencies]
ndarray = { version = "0.16.1", features = [
    "rayon",
    "matrixmultiply-threading",
    "blas"
] }
num-complex = { version = "0.4.6", features = ["rand"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
plotly = "0.9.0"
ndarray-rand = "0.15.0"
ndrustfft = "0.5.0"
tikv-jemallocator = { version = "0.6.0", optional = true }
mimalloc = { version = "0.1.43", optional = true }
statrs = "0.17.1"

[dev-dependencies]

[features]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
default = ["jemalloc"]

[lib]
name = "stochastic_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
doctest = false

[profile.release]
debug = false
codegen-units = 1
lto = true
