[package]
name = "stochastic-rs-quant"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library for quantitative finance"
homepage = "https://github.com/dancixx/stochastic-rs"
documentation = "https://docs.rs/stochastic-rs/latest/stochastic_rs_quant/"
repository = "https://github.com/dancixx/stochastic-rs"
readme = "README.md"
keywords = ["stochastic", "process", "random", "simulation", "monte-carlo"]

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
either = "1.13.0"
levenberg-marquardt = "0.14.0"
mimalloc = { version = "0.1.43", optional = true }
nalgebra = "0.33.0"
num-complex = "0.4.6"
polars = { version = "0.43.1", features = ["lazy"] }
quadrature = "0.1.2"
rand = "0.8.5"
rand_distr = "0.4.3"
statrs = "0.17.1"
stochastic-rs = { version = "0.8.2", path = "../stochastic-rs-core" }
stochastic-rs-stats = { version = "0.1.4", path = "../stochastic-rs-stats" }
tikv-jemallocator = { version = "0.6.0", optional = true }
time = { version = "0.3.36", features = ["formatting", "parsing"], optional = true}
tokio-test = "0.4.4"
yahoo_finance_api = { git = "https://github.com/dancixx/yahoo_finance_api.git", rev = "476ebdc", optional = true}

[features]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
yahoo = ["dep:time", "dep:yahoo_finance_api"]
default = ["yahoo", "jemalloc"]

[lib]
name = "stochastic_rs_quant"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
doctest = false

[profile.release]
debug = false
codegen-units = 1
lto = true
